Fix wave overflow

--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -3,6 +3,7 @@
 	flex-direction: column;
 	align-items: center;
 	text-align: center;
+  overflow: hidden;
   background: linear-gradient(to bottom, #f9f9f9 30%, #EA9071 0%);
 }
 
